fixed class for overflow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -675,7 +675,3 @@ ul.samplevalue {
 .surveyrule_tooltip:hover .surveyrule_tooltiptext {
     visibility: visible;
 }
-
-.surveyrule_select{
-    overflow: scroll;
-}
